finish calendar view render